FIX #174 #155 alertes & warnings : <a> in bold for better readability

--- a/sites/all/themes/emindhub/css/components/messages.less
+++ b/sites/all/themes/emindhub/css/components/messages.less
@@ -44,6 +44,10 @@
   label {
     margin: 0;
   }
+
+  a {
+    font-weight: bold;
+  }
 }
 div.status {
   background-image: none;
